[gd_scene load_steps=25 format=2]

[ext_resource path="res://default_env.tres" type="Environment" id=1]
[ext_resource path="res://scenes/PlayerSpawn.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/Teleport.gd" type="Script" id=3]
[ext_resource path="res://scenes/Models/PipePlaza.tscn" type="PackedScene" id=4]
[ext_resource path="res://sounds/sm64_enter_bowser_course.wav" type="AudioStream" id=5]
[ext_resource path="res://sounds/sm64_exit_course.wav" type="AudioStream" id=6]
[ext_resource path="res://scenes/Entities/Fire.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/Entities/para ammo.tscn" type="PackedScene" id=8]
[ext_resource path="res://scripts/entities/prop/prop_rigid.gd" type="Script" id=9]
[ext_resource path="res://scenes/Models/Water.tscn" type="PackedScene" id=10]
[ext_resource path="res://textures/solid/parque2.png" type="Texture" id=11]
[ext_resource path="res://scenes/Entities/chicken.tscn" type="PackedScene" id=12]
[ext_resource path="res://scenes/Entities/Text.tscn" type="PackedScene" id=13]
[ext_resource path="res://models/static/ChickenDinner/ChickenDinner.obj" type="ArrayMesh" id=14]
[ext_resource path="res://scenes/PeerController.tscn" type="PackedScene" id=15]



[sub_resource type="CylinderShape" id=1]
radius = 4.26174

[sub_resource type="CylinderShape" id=2]

[sub_resource type="CylinderMesh" id=3]
radial_segments = 16

[sub_resource type="BoxShape" id=4]
extents = Vector3( 1, 2, 1 )

[sub_resource type="StreamTexture" id=5]
flags = 19
load_path = "res://.import/tile.png-8644383a6c109d9e066d6d3d1e5f8130.s3tc.stex"

[sub_resource type="SpatialMaterial" id=6]
albedo_texture = SubResource( 5 )
uv1_scale = Vector3( 0.5, 0.5, 0.5 )
uv1_triplanar = true

[sub_resource type="CubeMesh" id=7]
material = SubResource( 6 )
size = Vector3( 2, 4, 2 )

[sub_resource type="SpatialMaterial" id=8]
albedo_texture = ExtResource( 11 )
uv1_scale = Vector3( 0.5, 0.5, 0.5 )
uv1_triplanar = true

[sub_resource type="CubeMesh" id=9]
material = SubResource( 8 )
size = Vector3( 2, 4, 2 )

[node name="TestArea" type="Spatial"]

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, -0.34202, 0.939693, 0, -0.939693, -0.34202, 0, 38.7554, -22.6426 )
light_energy = 0.8
shadow_enabled = true
directional_shadow_blend_splits = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 1 )

[node name="PipePlaza" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -25, 0 )

[node name="Teleport1" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -25.3049, 0 )
script = ExtResource( 3 )

[node name="TeleTopLeft" type="Area" parent="Teleport1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 19.544, 24.3524, 43.4509 )

[node name="CollisionShape" type="CollisionShape" parent="Teleport1/TeleTopLeft"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="CSGCylinder" type="CSGCylinder" parent="Teleport1/TeleTopLeft/CollisionShape"]
radius = 4.86382

[node name="ExitPoint" type="Spatial" parent="Teleport1/TeleTopLeft"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, -2 )

[node name="TeleExitA" type="AudioStreamPlayer3D" parent="Teleport1/TeleTopLeft"]
stream = ExtResource( 5 )

[node name="TeleEnterB" type="AudioStreamPlayer3D" parent="Teleport1/TeleTopLeft"]
stream = ExtResource( 6 )

[node name="TeleTopRight" type="Area" parent="Teleport1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -20, 24.2323, 42 )

[node name="CollisionShape" type="CollisionShape" parent="Teleport1/TeleTopRight"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="CSGCylinder" type="CSGCylinder" parent="Teleport1/TeleTopRight/CollisionShape"]
radius = 4.86382

[node name="ExitPoint" type="Spatial" parent="Teleport1/TeleTopRight"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, -2 )

[node name="TeleExitB" type="AudioStreamPlayer3D" parent="Teleport1/TeleTopRight"]
stream = ExtResource( 5 )

[node name="TeleEnterA" type="AudioStreamPlayer3D" parent="Teleport1/TeleTopRight"]
stream = ExtResource( 6 )

[node name="Prop" type="RigidBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9.37345, 0, -4.38997 )
mass = 25.0
can_sleep = false
script = ExtResource( 9 )

[node name="CollisionShape" type="CollisionShape" parent="Prop"]
shape = SubResource( 2 )

[node name="Cylinder" type="MeshInstance" parent="Prop"]
mesh = SubResource( 3 )
material/0 = null

[node name="Prop2" type="RigidBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 14.3, 0, -4.38997 )
mass = 25.0
can_sleep = false
script = ExtResource( 9 )

[node name="CollisionShape" type="CollisionShape" parent="Prop2"]
shape = SubResource( 4 )

[node name="Box" type="MeshInstance" parent="Prop2"]
mesh = SubResource( 7 )
material/0 = null

[node name="Prop3" type="RigidBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 61.3871, 9.50318, -4.38997 )
mass = 1.53061
can_sleep = false
script = ExtResource( 9 )

[node name="CollisionShape" type="CollisionShape" parent="Prop3"]
shape = SubResource( 4 )

[node name="Box" type="MeshInstance" parent="Prop3"]
mesh = SubResource( 9 )
material/0 = null

[node name="ammo" parent="." instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 46.0037, -32.1914 )

[node name="Fire" parent="." instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 16.4966, 0, 0 )
properties = {

}

[node name="Water" parent="." instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 58, -4.5, 0 )

[node name="chicken" parent="." instance=ExtResource( 12 )]
transform = Transform( 0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, -14.413, 0, 0 )

[node name="chicken3" parent="." instance=ExtResource( 12 )]
transform = Transform( 0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, -15.896, 0, 0 )

[node name="chicken4" parent="." instance=ExtResource( 12 )]
transform = Transform( 0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, -17.6857, 0, 0 )

[node name="chicken2" parent="." instance=ExtResource( 12 )]
transform = Transform( 0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, -22.2842, 0, 0 )

[node name="Text" parent="." instance=ExtResource( 13 )]
transform = Transform( 0.575576, 0, 0.817748, 0, 1, 0, -0.817748, 0, 0.575576, -8.31309, 0, 0 )

[node name="ChickenDinner" type="MeshInstance" parent="."]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -10.8703, -0.72667, -1.43194 )
mesh = ExtResource( 14 )
material/0 = null

[node name="SpawnPoint" parent="." instance=ExtResource( 2 )]

[node name="PeerController" parent="." instance=ExtResource( 15 )]
[connection signal="body_entered" from="Teleport1/TeleTopLeft" to="Teleport1" method="_on_TeleTopLeft_body_entered"]
[connection signal="body_entered" from="Teleport1/TeleTopRight" to="Teleport1" method="_on_TeleTopRight_body_entered"]
